syntax = "proto3";

package api;

option go_package = "./api";

message Peer {
  string id = 1;
  string ip = 2;
  int32 port = 3;
}

message Project {
  string ninja_host = 1; // ninja2 所在机器的ip
  string ninja_dir = 2;  // ninja2 的 build 工作目录
  string root_dir = 3;   // ninja2 的项目主目录
}
