syntax = "proto3";

package api;

import "common.proto";

option go_package = "./api";

// - **`PrepareLocalEnv`**: 初始化本地的构建环境。
// - **`SubmitAndExecute`**: 接收任务并将其放入本地队列等待执行完成。
// - **`CleanupLocalEnv`**: 清理本地的构建环境。

service ShareBuildExecutor {
  rpc PrepareLocalEnv(PrepareLocalEnvRequest) returns (PrepareLocalEnvResponse);

  rpc SubmitAndExecute(SubmitAndExecuteRequest)
      returns (SubmitAndExecuteResponse);

  rpc CleanupLocalEnv(CleanupLocalEnvRequest) returns (CleanupLocalEnvResponse);
}

message PrepareLocalEnvRequest {
  Project project = 1;
  string container_image = 2;
}

message PrepareLocalEnvResponse {
  Status status = 1;
}

message SubmitAndExecuteRequest {
  Project project = 1; // cmd 所属项目信息
  string cmd_id = 2;   // cmd id
}

message SubmitAndExecuteResponse {
  Status status = 1; // 返回码信息
  string id = 2;     // 任务id
  string std_out = 3; // 命令执行标准输出
  string std_err = 4; // 命令执行标准错误
}

message CleanupLocalEnvRequest { Project project = 1; }
message CleanupLocalEnvResponse { string status = 1; }
